2011-09-29  Eli Zaretskii  <eliz@gnu.org>

	* .bzrignore: Add ./GNUmakefile.unix, lib/SYS, lib/alloca.in-h,
	lib/signal.in-h.

	* config.bat: Rename GNUmakefile, so it is not run on MS-DOS.
	Rename signal.in.h and alloca.in.h.

2011-09-28  Eli Zaretskii  <eliz@gnu.org>

	* INSTALL: Mention that m17n libraries and libotf are needed for
	Arabic shaping.

2011-09-26  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, improving some licensing wording.
	This clarifies and fixes some licensing issues raised by Glenn Morris
	<http://lists.gnu.org/archive/html/bug-gnulib/2011-09/msg00397.html>.
	It also merges the latest version of texinfo.tex and has some
	MSVC-related changes that don't affect Emacs.
	* Makefile.in (GNULIB_TOOL_FLAGS): Avoid msvc-inval, msvc-nothrow,
	pathmax, and raise, since these are needed only to address
	MSVC-related issues that Emacs doesn't have.
	* doc/misc/texinfo.tex, lib/dup2.c, lib/gnulib.mk, lib/signal.in.h:
	* lib/sigprocmask.c, lib/stat.c, lib/stdio.in.h, lib/sys_stat.in.h:
	* lib/unistd.in.h, m4/dup2.m4, m4/getloadavg.m4, m4/gl-comp.m4:
	* m4/include_next.m4, m4/signal_h.m4, m4/signalblocking.m4:
	* m4/stdint.m4, m4/stdio_h.m4, m4/sys_stat_h.m4, m4/time_h.m4:
	* m4/unistd_h.m4: Merge from gnulib.

2011-09-26  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in: Initialize HAVE_LIBXML2.

2011-09-26  Glenn Morris  <rgm@gnu.org>

	* make-dist: Add lib/makefile.w32-in.

2011-09-24  Glenn Morris  <rgm@gnu.org>

	* configure.in (CRT_DIR): Fix netbsd/openbsd handling.

2011-09-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* .dir-locals.el: Change the debbugs regexp to allow having the
	bug number as the first thing on a line.

2011-09-15  Glenn Morris  <rgm@gnu.org>

	* configure.in: Make configure work with recent GNUsteps.
	(_NATIVE_OBJC_EXCEPTIONS): New AC_DEFINE.
	(GNU_OBJC_CFLAGS): Add -fobjc-exceptions when needed.
	(C_SWITCH_X_SYSTEM): Enable GNUstep to find its headers.

2011-09-11  Paul Eggert  <eggert@cs.ucla.edu>
