@@ -1,3 +1,8 @@
+2011-10-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.in (GC_LISP_OBJECT_ALIGNMENT): Remove.
+	This is now done by src/alloc.c.
+
 2011-09-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* .bzrignore: Add ./GNUmakefile.unix, lib/SYS, lib/alloca.in-h,
